# CronLab

./: CLAUDE.md  LICENSE  README.md  package.json  tsconfig.json
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CONFIG.md  DEVELOPMENT.md
scripts/: bump-version.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate-icons.mjs
src-tauri/src/: commands.rs  config.rs  executor.rs  lib.rs  main.rs  models.rs  notifications.rs  scheduler.rs
src/components/: ExecutionLog.tsx  Header.tsx  SettingsPanel.tsx  StatusBadge.tsx  TaskAdvanced.tsx  TaskForm.tsx  TaskList.tsx  TaskRow.tsx  TimePicker.tsx
src/hooks/: useCountdown.ts  useSettings.ts  useTasks.ts  useTheme.ts  useUpdater.ts
src/i18n/: en.json  fr.json  index.ts
src/lib/: tauri.ts  types.ts
src/styles/: global.css
