[package]
name = "cronlab"
version = "0.1.0"
description = "CronLab - Task Scheduler"
authors = ["Drosscend"]
edition = "2021"

[lib]
name = "cronlab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.22", features = ["v4", "serde"] }
cron = "0.15"
dirs = "6"
